# ys-movie

./: .dockerignore  DOCKER.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  run.md  start.py  systemctl.md
.cursor/rules/: 001zonhe.mdc  002guifan.mdc
core/: RESPONSE_FORMAT.md  __init__.py  comfyui_client.py  managers.py  models.py  response.py  utils.py
core/api/: __init__.py  media.py  system.py  task.py  workflow.py
core/api/specialized/: README.md  __init__.py  infinitetalk_i2v.py  super_video.py  text2image.py  wan22_i2v.py
docs/: API_USAGE.md  FRONTEND_UPDATE_LOG.md  POSTMAN_GUIDE.md  PROJECT_STRUCTURE.md  STRUCTURE.md  WAN22_I2V_API.md  WORKFLOW_ADAPTATION_GUIDE.md
examples/: README.md  advanced_usage.py  basic_usage.py  batch_generate.py  simple_text2image.py
static/: app.js  index.html  style.css
static/specialized/: README.md  index.html  infinitetalk_i2v.html  infinitetalk_i2v.js  style.css  super_video.css  super_video.html  super_video.js  text2image.html  text2image.js  wan22_i2v.html  wan22_i2v.js
workflows/: FlashVSR.json  FlashVSR1.1.json  HiDream-l1.json  SeedVR2.json  SuperVideo.json  Wan2.2-I2V-15s.json  faceEnch.json  faceEnchffmpeg.json  infinitetalkI2V.json  infinitetalkI2V_bak.json  jiedian.json  qwen_t2i_distill.json
workflows/normal/: FlashVSR1.1_normal.json  SeedVR2_normal.json
